Refactor app to support creating Unique Simulators for other bosses in the future

--- a/Osrs.Simulator.Console/Osrs.Simulator.Console.csproj
+++ b/Osrs.Simulator.Console/Osrs.Simulator.Console.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Nex.Simulator.Domain\Nex.Simulator.Domain.csproj" />
+      <ProjectReference Include="..\Osrs.Simulator.Domain\Osrs.Simulator.Domain.csproj" />
     </ItemGroup>
 
 </Project>
